# wlroots-0.18

./: DEBUG_UNUSED_FUNCTIONS.md  README.md  codeSpaceCompile.txt  debug_sway.sh  meson.build  meson_options.txt  replace_termux_prefix.sh
backend/: backend.c  meson.build
backend/termux/: backend.c  input.c  meson.build  output.c  termux_render.c
docs/: env_vars.md
include/backend/: termux.h
include/wlr/: config.h.in
include/wlr/backend/: termux.h
render/allocator/: allocator.c
tinywl/: meson.build  tinywl.c
util/: shm.c
xcursor/: xcursor.c
xwayland/: server.c  sockets.c
